# http://doc.crates.io/manifest.html

[package]
name = "mailchecker"
version = "6.0.11"
authors = ["François-Guillaume Ribreau <rust@fgribreau.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Cross-language temporary (disposable/throwaway) email detection library. Covers 2740 fake email providers."

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://docs.rs/mailchecker"
homepage = "https://github.com/FGRibreau/mailchecker"
repository = "https://github.com/FGRibreau/mailchecker"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "../../README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["email", "validation", "validator", "domains", "disposable"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["email", "web-programming"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"

include = ["src/lib.rs", "Cargo.toml"]

[dependencies]
fast_chemail = "0.9.5"
once_cell = "1.8.0"

[dev-dependencies]
pretty_assertions = "0.1.2"

[lib]

# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

# A flag for enabling unit tests for this target. This is used by `cargo test`.
test = true

# A flag for enabling documentation tests for this target. This is only relevant
# for libraries, it has no effect on other sections. This is used by
# `cargo test`.
doctest = true

# A flag for enabling benchmarks for this target. This is used by `cargo bench`.
bench = true

# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
